--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "teleop_twist_keyboard"]
 	path = teleop_twist_keyboard
 	url = https://github.com/ros-teleop/teleop_twist_keyboard
+[submodule "yolov5"]
+	path = yolov5
+	url = https://github.com/ultralytics/yolov5
