--- a/move_base_config/costmap_common_params.yaml
+++ b/move_base_config/costmap_common_params.yaml
@@ -1,7 +1,7 @@
 max_obstacle_height: 7.0  # assume something like an arm is mounted on top of the robot
 
 # Obstacle Cost Shaping (http://wiki.ros.org/costmap_2d/hydro/inflation)
-robot_radius: 0.50  # distance a circular robot should be clear of the obstacle (kobuki: 0.18)
+robot_radius: 0.40  # distance a circular robot should be clear of the obstacle (kobuki: 0.18)
 # footprint: [[x0, y0], [x1, y1], ... [xn, yn]]  # if the robot is not circular
 
 map_type: voxel
@@ -9,6 +9,7 @@ map_type: voxel
 obstacle_layer:
   enabled:              true
   max_obstacle_height:  10.0
+  min_obstacle_height:  1.0
   origin_z:             0.0
   z_resolution:         0.2
   z_voxels:             10
@@ -28,8 +29,8 @@ obstacle_layer:
 #cost_scaling_factor and inflation_radius were now moved to the inflation_layer ns
 inflation_layer:
   enabled:              true
-  cost_scaling_factor:  3.0  # exponential rate at which the obstacle cost drops off (default: 10)
-  inflation_radius:     1.3  # max. distance from an obstacle at which costs are incurred for planning paths.
+  cost_scaling_factor:  10.0  # exponential rate at which the obstacle cost drops off (default: 10)
+  inflation_radius:     1.0  # max. distance from an obstacle at which costs are incurred for planning paths.
 
 static_layer:
   enabled:              true
