--- a/move_base_config/costmap_common_params.yaml
+++ b/move_base_config/costmap_common_params.yaml
@@ -23,8 +23,8 @@ obstacle_layer:
   #z_resolution: 0.2
   #z_voxels: 2
   publish_voxel_map: false
-  observation_sources:  cloud
-  cloud: {data_type: PointCloud, topic: /velodyne_points, marking: true, clearing: true, inf_is_valid: true}
+  #observation_sources:  cloud
+  #loud: {data_type: PointCloud, topic: /velodyne_points, marking: true, clearing: true, inf_is_valid: true}
 
 #cost_scaling_factor and inflation_radius were now moved to the inflation_layer ns
 inflation_layer:
