--- a/move_base_config/global_costmap_params.yaml
+++ b/move_base_config/global_costmap_params.yaml
@@ -1,13 +1,13 @@
 global_costmap:
    global_frame: /map
-   robot_base_frame: /base_footprint
-   update_frequency: 1.0
-   publish_frequency: 0.5
+   robot_base_frame: /base_link
+   update_frequency: 5.0
+   publish_frequency: 1.0
    static_map: true
    transform_tolerance: 0.5
    plugins:
      - {name: static_layer,            type: "costmap_2d::StaticLayer"}
-     - {name: obstacle_layer,          type: "costmap_2d::VoxelLayer"}
+     - {name: obstacle_layer,          type: "costmap_2d::ObstacleLayer"}
      - {name: inflation_layer,         type: "costmap_2d::InflationLayer"}
      # Adding another layer here is the correct solution to stay within the search area, as opposed to the fake walls that the robot can fly over
 
