--- a/move_base_config_2d/base_local_planner_params.yaml
+++ b/move_base_config_2d/base_local_planner_params.yaml
@@ -1,13 +1,25 @@
+# TrajectoryPlannerROS:
+#   max_vel_x: 2.5
+#   min_vel_x: 0
+#   max_vel_y: 2.5
+#   min_vel_y: 0
+#   max_vel_theta: .25
+#   min_vel_theta: -.25
+#   min_in_place_vel_theta: 0.03
+#   acc_lim_theta: 10.0
+#   acc_lim_x: 10.0
+#   acc_lim_y: 10.0
+#   holonomic_robot: true
+  
 TrajectoryPlannerROS:
-  max_vel_x: 1.2
-  min_vel_x: 0
-  max_vel_y: 1.2
-  min_vel_y: 0
-  max_vel_theta: .25
-  min_vel_theta: -.25
-  min_in_place_vel_theta: 0.03
+  max_vel_x: 2.5
+  min_vel_x: 2.4
+  max_vel_y: 2.5
+  min_vel_y: 2.4
+  max_vel_theta: .7
+  min_vel_theta: -.7
+  min_in_place_vel_theta: 0.2
   acc_lim_theta: 10.0
   acc_lim_x: 10.0
   acc_lim_y: 10.0
   holonomic_robot: true
-  
